# rss-feed-scraper

./: .gitignore  pyproject.toml  scraping_config.json
src/: __main__.py  config.py  scraper.py
