[tool.poetry]
name = "rss-feed-scraper"
version = "0.1.0"
description = ""
authors = ["buhovets <x10c@duck.com>"]
readme = "README.md"
packages = [{include = "rss_feed_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests-html = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
